# SnakePlusPlus

./: CMakeLists.txt
includes/: board.h  food.h  game.h  snake.h
src/: board.cpp  food.cpp  game.cpp  main  main.cpp  snake.cpp
